--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "author": "Alexandr Voloshin",
   "license": "ISC",
+  "files": ["dist"],
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
