--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuttie",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "croppper image for js",
   "main": "index.html",
   "scripts": {
@@ -20,7 +20,9 @@
   ],
   "author": "Alexandr Voloshin",
   "license": "ISC",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -32,5 +34,8 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "cuttie": "^0.0.9"
   }
 }
