--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuttie",
-  "version": "0.0.3",
+  "version": "1.0.2",
   "description": "croppper image for js",
   "main": "index.html",
   "scripts": {
@@ -33,9 +33,8 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "dependencies": {
-    "cuttie": "^0.0.9"
+    "webpack-dev-server": "^5.1.0",
+    "cuttie": "^1.0.1",
+    "html-loader": "^5.1.0"
   }
 }
