--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuttie",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "croppper image for js",
   "main": "index.html",
   "scripts": {
@@ -18,7 +18,7 @@
     "frameimage",
     "frame"
   ],
-  "author": "Alexandr Voloshin",
+  "author": "Alexandr Voloshin (Eshenok)",
   "license": "ISC",
   "files": [
     "dist"
